[package]
name = "cbordump"
version = "0.1.0"
authors = ["Sami Kukkonen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cbor"
path = "src/main.rs"

[dependencies]
cbor = "0.4.1"
clap = "2.33.0"
json = "0.12.0"
base64 = "0.11.0"